2007-01-25  Rodrigo Moya <rodrigo@gnome-db.org>

	* control-center/*: removed old shell.

2007-01-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* NEWS:
	* configure.in: prepare for 2.17.90.

2007-01-21  Thomas Wood  <thos@gnome.org>

	* MAINTAINERS: Add myself, remove Chris Lahey

2007-01-19  Jens Granseuer <jensgr@gmx.net>

	Fixes #397905

	* configure.in: check for xf86misc library in addition to header files.

2007-01-17  Denis Washington  <dwashington@gmx.net>

	* capplets/accessibility/keyboard/accessibility-keyboard.desktop.in.in:
	* capplets/accessibility/at-properties/at-properties.desktop.in.in:
	* capplets/network/gnome-network-preferences.desktop.in.in:
	* capplets/default-applications/default-applications.desktop.in.in:
	* capplets/about-me/gnome-about-me.desktop.in.in:

	Replace the non-standard-compilant categories PersonalSettings,
	NetworkSettings and SystemSettings with X-GNOME-*.

2007-01-09  Thomas Wood  <thos@gnome.org>

	* Makefile.am: Fix for distcheck

2007-01-08  Rodrigo Moya <rodrigo@gnome-db.org>

	* NEWS:
	* configure.in: updated for 2.17.5.

2007-01-08  Jan Arne Petersen  <jpetersen@jpetersen.org>

	Fixes #173035

	* configure.in: updated sound capplet requirements.

2007-01-08  Denis Washington <dwashington@gmx.net>

	Fixes #393617

	* */*.desktop.in.in: use new control center shell categories for
	the capplets.

2007-01-08  Thomas Wood  <thos@gnome.org>

	Patch by: Alberto Ruiz <aruiz@synaptia.net>

	* configure.in:

	Add support for opening .gtp (application/x-gnome-theme-package) files.
	Fixes bug 393697 (Theme packages should have their own mime type.)

2007-01-06  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	Fixes #392276

	* configure.in: added support for disabling esound.

2007-01-03  Christian Persch  <chpe@svn.gnome.org>

	* configure.in:
	A po/LINGUAS:
	Apply GnomeGoal. Patch by Steve Frécinaux and Luca Cavalli, bug
	#337909.

2006-12-19  Sebastien Bacher <seb128@ubuntu.com>

	* NEWS:
	* configure.in: updated for 2.17.4
