@@ -1,3 +1,8 @@
+2007-01-28  Christian Persch  <chpe@svn.gnome.org>
+
+	* shell/Makefile.am: Respect the --disable-schemas-install configure
+	flag. Bug #401004.
+
 2007-01-25  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* control-center/*: removed old shell.
